--- a/writing/manifest.json
+++ b/writing/manifest.json
@@ -15,7 +15,8 @@
     "file": "limits-of-science.html",
     "title": "On the Limits of Science",
     "date": "2024-07-14",
-    "tags": ["science", "philosophy", "epistemology"]
+    "tags": ["science", "philosophy", "epistemology"],
+    "image": "https://files.catbox.moe/qeiwri.jpg"
   },
   {
     "file": "purpose-of-life.html",
