--- a/writing/manifest.json
+++ b/writing/manifest.json
@@ -13,7 +13,7 @@
     "image": "https://files.catbox.moe/qeiwri.jpg"
   },
   {
-    "file": "atoms.html",
+    "file": "atom.html",
     "title": "Atoms",
     "date": "2024-06-03",
     "tags": ["meta", "physics"]
