--- a/writing/manifest.json
+++ b/writing/manifest.json
@@ -9,8 +9,7 @@
     "file": "domestic_tech.html",
     "title": "Why Countries Should Prioritize Domestic Tech",
     "date": "2024-03-03",
-    "tags": ["thought"],
-    "image": "https://files.catbox.moe/qeiwri.jpg"
+    "tags": ["thought"]
   },
   {
     "file": "atom.html",
