--- a/graph/package.json
+++ b/graph/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://abstractanuj.github.io/graph",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
