--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,15 @@
 name: Deploy to GitHub Pages
 
 on:
-  # Runs on pushes targeting the main branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -32,17 +27,26 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      
       - name: Install dependencies
         run: npm install
+        # ASSUMPTION: The 'package.json' is in a folder named 'graph'
+        working-directory: ./graph # <--- UPDATE THIS LINE
+
       - name: Build
         run: npm run build
+        # ASSUMPTION: The 'package.json' is in a folder named 'graph'
+        working-directory: ./graph # <--- UPDATE THIS LINE
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
-          path: './dist'
+          # Upload the 'dist' folder located inside the 'graph' directory
+          path: './graph/dist' # <--- UPDATE THIS PATH
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
